empty state and fix spacings

--- a/app/theme.css
+++ b/app/theme.css
@@ -65,6 +65,13 @@
   --padding-m: 6px 10px;
   --padding-s: 4px 8px;
   --padding-xs: 3px 6px;
+
+  /* heights */
+  --height-xl: 28px;
+  --height-l: 24px;
+  --height-m: 20px;
+  --height-s: 16px;
+  --height-xs: 12px;
 }
 
 /* Fonts */
@@ -185,4 +192,24 @@ body, input, textarea, select {
 
 .padding-xl {
   padding: var(--padding-xl);
+}
+
+.height-xs {
+  height: var(--height-xs);
+}
+
+.height-s {
+  height: var(--height-s);
+}
+
+.height-m {
+  height: var(--height-m);
+}
+
+.height-l {
+  height: var(--height-l);
+}
+
+.height-xl {
+  height: var(--height-xl);
 }
